@@ -2,6 +2,15 @@
 
 A simple and clean GUI for NQueens problem implemented using JavaFX.
 
+• How to run?
+
+ Directory : src/main/
+ 
+Compile: javac --module-path "path to javafx-sdk\lib" --add-modules javafx.controls,javafx.fxml App.java
+
+Execute: java --module-path "path to javafx-sdk\lib" --add-modules javafx.controls,javafx.fxml App.java
+
+
 Here's a preview of the GUI:
 
 ![z](https://github.com/hussainahmd/NQueens-GUI/assets/101217726/85445a4c-8a10-49b4-b877-e157bd8f9c70)
